tests/valid/hex.lang
import "core:c";

fn main() {
    if (0xffffff != 16777215) abort();
}
