tests/invalid/invalid_assignment.lang
module main

func main() {
    1 = 1;
}
